welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var x=0
^Poucet:8: error: ';' expected but '{' found.
 while (!crossing()) {
                     ^